# DifFracTion

./: DifFracTion_Tutorial.ipynb  DifFracTion_method.md  LICENSE  README.md  pyproject.toml
benchmarking/: README  generate_inputs.py  generate_inputs_downsample.py  run_HiCDCPlus.R  run_HiCDCPlus_ds.R  run_HiCcompare.R  run_HiCcompare_ds.R  run_benchmarking.sh  run_benchmarking_downsample.sh  run_diffHiC.R  run_diffHiC_ds.R  runmultiHiCcompare.R  runmultiHiCcompare_ds.R
diffraction/: benchmarking.py  spikein.py  spikes.py  spikes_validation.py  src.py  utils.py  validation.py
diffraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rust/hicdip-rs/: Cargo.toml  README  evcxr  loadmod
rust/hicdip-rs/src/: main.rs  main_v1.rs
validation/spike_ins/: README.md  run_spikein_validation.py  run_spikein_validation.sh  run_spikein_validation_rs.py  run_spikein_validation_rs.sh  run_spikein_validation_rs_stats.py
validation/synthetic_resolution/: README.md  run_synthetic_validation_resolution.py  run_synthetic_validation_resolution.sh
